--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <!-- <div class="hero"></div> -->
+    <div class="hero"></div>
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with Seach Engine Optimization information on top"; class="float-left" />
