--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    
+    <!--Keep next section independent from the preceeding header section and the -proceeding <main> section-->
+    <!--large image-->
+    <section class="hero"></section>
+    
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with Seach Engine Optimization information on top"; class="float-left" />
@@ -48,6 +52,7 @@
             </p>
         </section>
     </main>
+ <!--section along right side of webpage-->   
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
